# SFulx

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  SFlux.pro  cmake_install.cmake
src/: main.cpp
src/AssetManager/: ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceType.hpp
src/Audio/: AudioManager.cpp  AudioManager.h
src/Input/: InputHandler.cpp  InputHandler.h
src/Logic/: GameScene.h  Object.cpp  Object.h  Player.cpp  Player.h
src/Renderer/: Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  AssetMenager.cpp  AssetMenager.h  FontManager.cpp  FontManager.h  FontMenager.cpp  FontMenager.h
src/Window/: Game.cpp  Game.h  Window.cpp  Window.h
tests/ResourceLoader/: CMakeLists.txt
tests/ResourceLoader/src/: main.cpp
